--- a/pages/guess/guess.wxss
+++ b/pages/guess/guess.wxss
@@ -1,6 +1,6 @@
 /* pages/statistics/statistics.wxss */
 .wrap {
-  height: 1206rpx;
+  height: 100%;
   overflow: hidden
 }
 .red-box {
@@ -163,7 +163,7 @@ background-color: #FFF9E3;
 }
 .tab {
   box-sizing: border-box;
-  padding: 18rpx 0 25rpx 0;
+  padding: 10rpx 0 25rpx 0;
 }
 .tab-item {
  width: 212rpx;
@@ -172,7 +172,8 @@ background-color: #FFF9E3;
 .cut-line {
   width: 100%;
   height: 20rpx;
-  background-color: #e48d48
+  background-color: #e48d48;
+  opacity: .2;
 }
 .record-icon {
   width: 215rpx;
@@ -191,7 +192,13 @@ background-color: #FFF9E3;
 
 
 .record-list {
-  height: 396rpx;
+  /* height: 406rpx; */
+   position: fixed;
+  top: 796rpx;
+  left: 0; 
+  bottom: 0;
+  right: 0;
+  background-color: #FFF9E3;
 }
 .one-record {
   position: relative;
@@ -201,10 +208,11 @@ background-color: #FFF9E3;
   font: 28rpx/41rpx "Microsoft YaHei";
   color: #b21f2e;
   font-size: 26rpx;
+  margin: 0 25rpx;
 }
 .get-avatar {
   box-sizing: border-box;
-  margin: 12rpx 16rpx 0 25rpx;
+  margin: 12rpx 16rpx 0 0;
   border-radius: 50%;
   border: 4rpx solid #fff;
   width: 80rpx;
@@ -221,7 +229,7 @@ background-color: #FFF9E3;
 
 .get-gold {
   position: absolute;
-  right: 25rpx;
+  right: 0;
   top: 10rpx;
 }
 .kb {
