--- a/pages/help/help.wxss
+++ b/pages/help/help.wxss
@@ -1,10 +1,10 @@
-
 #scroll-box {
   background-color: #fff9e3;
   width: 100%;
   height: 100vh;
    font-size: 28rpx;
   font-weight: bold;
+  padding-top: 30rpx;
 }
 .item {
 box-shadow: 0 6rpx 12rpx #f9e8c9;
