--- a/pages/tixian/tixian.wxml
+++ b/pages/tixian/tixian.wxml
@@ -1,6 +1,6 @@
 <!--pages/tixian/tixian.wxml-->
 <view class="wrap">
-  <button class="opcity" open-type='contact' size='mini'>客服</button>
+  <button class="opcity" open-type='contact'>客服</button>
   <image class="service" src='https://gengxin.odao.com/update/h5/wangcai/withdraw/service.png'></image>
   <view class="withdraw-info">
     <view class="remainder">
