--- a/pages/guess/guess.wxss
+++ b/pages/guess/guess.wxss
@@ -230,7 +230,13 @@
   background-size: 212rpx 59rpx;
   background-position: center center;
 }
+.zhuan-box {
+  position: relative;
+  width: 212rpx;
+  height: 59rpx;
+}
 .zhuan {
+  position: absolute;
   width: 212rpx;
   height: 59rpx;
   background: url('https://gengxin.odao.com/update/h5/wangcai/guess/zhuan.png') no-repeat;
@@ -238,13 +244,22 @@
   background-position: center center;
 }
 .zhuan-click {
+  position: absolute;
   width: 212rpx;
   height: 59rpx;
   background: url('https://gengxin.odao.com/update/h5/wangcai/guess/zhuan-click.png') no-repeat;
   background-size: 212rpx 59rpx;
   background-position: center center;
 }
-
+.opa-btn {
+  position: absolute;
+  left: 0;
+  top: 0;
+  z-index: 2;
+  width: 212rpx;
+  height: 59rpx;
+  opacity: 0;
+}
 .cut-line {
   width: 100%;
   height: 20rpx;
