--- a/pages/help/help.wxml
+++ b/pages/help/help.wxml
@@ -13,8 +13,11 @@
 </view>
 <view class="fsb server-box" >
 <image class="dress-rgt" src='https://gengxin.odao.com/update/h5/wangcai/help/dress-rgt.png'></image>
-  <text class="{{isactive}}" bindtouchstart='clickStart' bindtouchend='clickEnd' bindtap='lianxi'></text>
-  <button class="server-btn" open-type='contact'>客服</button>
+<view class="contact-box">
+ <text class="{{isactive}}" ></text>
+  <button class="server-btn" open-type='contact' bindtouchstart='clickStart' bindtouchend='clickEnd' bindtap='lianxi'>客服</button>
+</view>
+ 
 
 
 <image class="dress-left" src='https://gengxin.odao.com/update/h5/wangcai/help/dress-left.png'></image>
