--- a/app.wxss
+++ b/app.wxss
@@ -11,6 +11,7 @@
 
 .flex {
   display: flex;
+  display: -webkit-flex;
   justify-content: center;
   width: 100%;
 } 
@@ -22,6 +23,7 @@
 .fsb {
     display: flex;
     justify-content: space-between;
+    align-items: center;
     width: 100%;
 }
 .fcsb {
