--- a/pages/help/help.wxss
+++ b/pages/help/help.wxss
@@ -1,5 +1,8 @@
+.box {
+background-color: #fff9e3;
+}
 #scroll-box {
-  background-color: #fff9e3;
+  
   width: 100%;
   height: 100vh;
    font-size: 28rpx;
@@ -7,7 +10,8 @@
   padding-top: 30rpx;
 }
 .item {
-box-shadow: 0 6rpx 12rpx #f9e8c9;
+ box-shadow: 0 -4rpx 0 #f5eee3 inset,0 6rpx 12rpx #f9e8c9; 
+/* box-shadow:0 6rpx 12rpx #f9e8c9; */
 border-radius: 20rpx;
   background-color: #fff;
   margin-bottom: 20rpx;
@@ -44,6 +48,11 @@ border-radius: 20rpx;
 .server-box {
   width: 750rpx;
   height: 188rpx;
+  position: fixed;
+  bottom: 0;
+  left: 0;
+  background-color: #fff9e3;
+  z-index: 9
 }
 .contact-box {
    width: 530rpx;
