--- a/pages/help/help.wxss
+++ b/pages/help/help.wxss
@@ -2,9 +2,14 @@
 background-color: #fff9e3;
 }
 #scroll-box {
-  
+  background-color: #fff9e3;
+  position: fixed;
+  bottom: 188rpx;
+  top: 0;
+  left: 0;
+  right: 0;
   width: 100%;
-  height: 100vh;
+  /* height: 100vh; */
    font-size: 28rpx;
   font-weight: bold;
   padding-top: 30rpx;
