--- a/components/pop/pop.wxml
+++ b/components/pop/pop.wxml
@@ -1,10 +1,13 @@
 <!--component/pop/pop.wxml-->
-<view class='wrap' bindtap='toHidden' wx:if='{{apper}}'>
+<view class='wrap flex-column' wx:if='{{appear}}'>
   <view class='main-pop'>
-    <text>{{content}}</text>
-    <view class='btn-wrap' wx:if='{{isShow}}'>
-      <button class='btn' bindtap='seeRecord'>{{isShow}}{{firstBtn}}</button>
-      <button class='btn' bindtap='sendRedPacket'>{{secondBtn}}</button>
+    <view class='content flex-column'>
+      <text class='{{content.length < 10 ? "long-text":"text"}}'>{{content}}</text>
+    </view>
+    <view class='btn-wrap flex'>
+      <text class='btn' bindtap='cancle'>{{cancleBtn}}</text>
+      <text hidden='{{singleBtn}}' class='line'></text>
+      <text hidden='{{singleBtn}}' class='btn' bindtap='sure'>{{sureBtn}}</text> 
     </view>
   </view>
 </view>
