--- a/components/pop/pop.wxss
+++ b/components/pop/pop.wxss
@@ -1,23 +1,58 @@
 /* component/pop/pop.wxss */
-.wrap {
+ .flex-column  {
   display: flex;
-  justify-content:center;
-  align-items: center; 
+  align-items: center;
+  justify-content: space-around;
+  flex-direction: column;
+} 
+.wrap {
   position: fixed;
   left: 0;
   top: 0;
+  padding: 0 25rpx;
+  z-index: 9;
+  box-sizing: border-box;
   width: 100vw;
   height: 100vh;
-  background: rgba(0, 0, 0, 0.3)
+  background: rgba(0, 0, 0, 0.7)
 }
 .main-pop {
-  border: 1rpx solid #888;
-  width: 500rpx;
+  box-sizing: border-box;
+  border-bottom: 3rpx solid #7f010e;
+  padding: 8rpx;
+  border-radius: 20rpx;
+  width: 100%;
   text-align: center;
+  background: #b21f2e;
+}
+.content {
+  border-radius: 18rpx;
+  padding: 0 43rpx;
+  box-sizing: border-box;
+  width: 100%;
+  height: 288rpx;
+  color: #b21f2e;
+  background: #fff;
+}
+.text {
+  font: bold 32rpx/48rpx 'Microsoft YaHei';
+}
+.long-text {
+  font: bold 52rpx 'Microsoft YaHei';
 }
 .btn-wrap {
   display: flex;
+  box-sizing: border-box;
+  padding: 12rpx 0;
+  height: 120rpx;
+  
 }
 .btn {
-  justify-content: space-around 
+  flex: 1;
+  font: bold 36rpx/104rpx 'Microsoft YaHei';
+  color: #fff;
+  text-align: center;
+}
+.line {
+  border-left: 4rpx solid #7f010e;
 }
