--- a/pages/tixian/tixian.wxml
+++ b/pages/tixian/tixian.wxml
@@ -6,8 +6,11 @@
     <view class="remainder">
       <text class="remain-num">{{remainder}}</text>元
     </view>
+    <view class="tips">
+      <text>提现金额上限为50000</text>
+    </view>
     <view class="withdraw-money">
-      <input id='num' class="num" type='number' focus="{{true}}" value='{{withdraw}}' bindinput='getMoney'></input>
+      <input id='num' class="num" type='number' maxlength="6" focus="{{true}}" value='{{withdraw}}' bindinput='getMoney'></input>
     </view>
     <image class="withdraw-all" src='https://gengxin.odao.com/update/h5/wangcai/withdraw/all-withdraw.png' bindtap='allRemain'></image>
     <image class="confirm" src='{{withdrawSrc}}' bindtouchstart='active' bindtouchend='cancel' bindtap='confirmWithdraw'></image>
