--- a/pages/rank/rank.wxml
+++ b/pages/rank/rank.wxml
@@ -9,25 +9,25 @@
         <text class='nickname'>{{userInfo.nickName}}</text>
         <view class='package-num'>
           <image class='package' src='https://gengxin.odao.com/update/h5/wangcai/guess/package-icon.png'></image> 
-          <text class='num'>{{myMoney}}元</text>
+          <text class='num'>{{pidMoney}}元</text>
         </view>  
       </view>
     </view>
     <image class="bg-cir" src="https://gengxin.odao.com/update/h5/wangcai/guess/bg.png"></image>
   </view>
   <view class="result flex">
-    <view class="result-bg">
+    <view class="result-bg" wx:if="{{password.length}}">
       <view class="result-num flex">
-        <image class="num-icon" src="https://gengxin.odao.com/update/h5/wangcai/rank/{{num[0]}}.png"></image>
+        <image class="num-icon" src="https://gengxin.odao.com/update/h5/wangcai/rank/{{password[0]}}.png"></image>
       </view>
       <view class="result-num flex">
-        <image class="num-icon" src="https://gengxin.odao.com/update/h5/wangcai/rank/{{num[1]}}.png"></image>
+        <image class="num-icon" src="https://gengxin.odao.com/update/h5/wangcai/rank/{{password[1]}}.png"></image>
       </view>
       <view class="result-num flex">
-        <image class="num-icon" src="https://gengxin.odao.com/update/h5/wangcai/rank/{{num[2]}}.png"></image>
+        <image class="num-icon" src="https://gengxin.odao.com/update/h5/wangcai/rank/{{password[2]}}.png"></image>
       </view>
       <view class="result-num flex">
-        <image class="num-icon" src="https://gengxin.odao.com/update/h5/wangcai/rank/{{num[3]}}.png"></image>
+        <image class="num-icon" src="https://gengxin.odao.com/update/h5/wangcai/rank/{{password[3]}}.png"></image>
       </view>
     </view>
   </view>
@@ -42,21 +42,21 @@
     <view class="flex">
       <image class="rank-title" src="https://gengxin.odao.com/update/h5/wangcai/rank/rank.png"></image>
     </view>
-    <scroll-view scroll-y class="person-list flex">
+    <scroll-view scroll-y class="person-list flex" wx:if="{{getInfo.length}}">
       <view class="person-info" wx:for="{{getInfo}}" wx:key="{{index}}">
         <text class="ranking {{index==0 ? 'ranking-first' : '' || index==1 ? 'ranking-second' : '' || index==2 ? 'ranking-third' : ''}}">{{index+1}}</text>
         <view class="person-touxiang flex {{index==0 ? 'first' : '' || index==1 ? 'second' : '' || index==2 ? 'third' : ''}}">
-             <image class="person-avatar {{index==0 ? 'first-avatar' : '' || index==1 ? 'second-avatar' : '' || index==2 ? 'third-avatar' : ''}}" src='{{userInfo.avatarUrl}}'></image>  
+             <image class="person-avatar {{index==0 ? 'first-avatar' : '' || index==1 ? 'second-avatar' : '' || index==2 ? 'third-avatar' : ''}}" src='{{item.userInfo.avatarUrl}}'></image>  
         </view>
         <view class="record">
-          <text class='record-info'>{{item.nickname}}</text>
-          <text class='record-info'>{{comment}}</text>
-          <text class='record-info' wx:for="{{item.guessNum}}" wx:key="{{index}}" wx:for-item="guessNum">{{guessNum}}</text>
+          <text class='record-info'>{{item.userInfo.nickName}}</text>
+          <text class='record-info'>{{comment[index]}}</text>
+          <text class='record-info' wx:for="{{item.guessRecords}}" wx:key="{{index}}" wx:for-item="guess">{{guess.userAnswerWord}}</text>
         </view>
         <view class="record rank-result">
-          <text class='record-info'>领取{{item.gold}}元</text>
+          <text class='record-info'>领取{{item.moneyGot}}元</text>
           <text class='record-info opacity'>占位</text>
-          <text class='record-info' wx:for="{{item.guessResult}}" wx:key="{{index}}" wx:for-item="guessResult">{{guessResult}}</text>
+          <text class='record-info' wx:for="{{item.guessRecords}}" wx:key="{{index}}" wx:for-item="guess">{{guess.userMark}}</text>
         </view>
       </view>
     </scroll-view>
