--- a/pages/rank/rank.wxml
+++ b/pages/rank/rank.wxml
@@ -50,7 +50,7 @@
         </view>
         <view class="record">
           <text class='record-info'>{{item.userInfo.nickName}}</text>
-          <text class='record-info'>{{comment[index]}}</text>
+          <text class='record-info'>{{item.maxRecord.commit}}</text>
           <text class='record-info' wx:for="{{item.guessRecords}}" wx:key="{{index}}" wx:for-item="guess">{{guess.userAnswerWord}}</text>
         </view>
         <view class="record rank-result">
